[gd_scene load_steps=7 format=3 uid="uid://l5chtwwtd8hr"]

[ext_resource type="PackedScene" uid="uid://bc2skl5nbytm0" path="res://Scenes/Prefabs/interactableObject.tscn" id="1_uo3by"]
[ext_resource type="PackedScene" uid="uid://c6ya6hl8bqx3j" path="res://Assets/Models/sesonal/summer/water.glb" id="2_4lglj"]
[ext_resource type="Script" path="res://Src/Gameplay/iteractableObjects/summer/water_bottle.gd" id="2_m5phb"]

[sub_resource type="Animation" id="Animation_tgsdl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ghpfw"]
resource_name = "consume"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0493304, -0.0197802, 0.0550889), Vector3(-0.0493304, -0.0197802, 0.0550889), Vector3(-0.0493304, -0.221637, 0.0550889)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-1.58888e-08, -2.1363, -0.54196), Vector3(0.300665, -1.69715, -0.740033), Vector3(-0.0334392, -1.89453, -2.00494)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r6cev"]
_data = {
"RESET": SubResource("Animation_tgsdl"),
"consume": SubResource("Animation_ghpfw")
}

[node name="WaterBottle" groups=["waterbottle"] instance=ExtResource("1_uo3by")]
script = ExtResource("2_m5phb")
canInteract = true

[node name="Model" parent="." index="0"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="water" parent="Model" index="0" instance=ExtResource("2_4lglj")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0433044, 0.00114747)

[node name="Consume" type="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_r6cev")
}

[connection signal="consume_waterbottle" from="." to="." method="_on_consume_waterbottle"]
[connection signal="animation_finished" from="Consume" to="." method="_on_consume_animation_finished"]
